k8s/node-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-server-deployment
spec:
  selector:
    matchLabels:
      component: node-server
  template:
    metadata:
      labels:
        component: node-server
    spec:
      containers:
      - name: node-server-deployment
        image: aishwarydhare/hellonode:4
        ports:
        - containerPort: 8086
