k8s/redis-server-clusterip-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: redis-clusterip-service
spec:
  selector:
    component: redis-server
  ports:
  - port: 6379
    targetPort: 6379
